--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="container">
-            <canvas id="game" width="720" height="720"></canvas>
+            <canvas id="game" width="720" height="720" tabindex="1"></canvas>
         </div>
     </body>
 </html>
