more ui changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <div id="container">
+            <h2 id="timer">4</h2>
             <canvas id="game" width="720" height="720" tabindex="1"></canvas>
+            <div id="prompt"></div>
         </div>
     </body>
 </html>
