--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
     </head>
     <body>
         <div id="container">
-            <h2 id="timer">4</h2>
             <canvas id="game" width="720" height="720" tabindex="1"></canvas>
             <div id="prompt"></div>
+        </div>
+        <div id="right">
+            <h2 id="timer">4</h2>
+            <div id="todo-cnt">
+                <h2>Things to do:</h2>
+                <ul id="todo">
+                    <li class="ip">Get out of bed</li>
+                    <li>Pick something cute to wear</li>
+                    <li>Eat something</li>
+                    <li>Clean up my room</li>
+                    <li>See some friends</li>
+                    <li>Order.. coffee</li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
